<resources>
    <string name="app_name">main_module</string>
    <!--navigation view-->
    <string name="chats">Chats</string>
    <string name="contacts">Contacts</string>
    <string name="discover">Discover</string>
    <string name="game">Game</string>
    <string name="me">Me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
